# astropy

./: .gitignore  LICENSE  README.md  mypy.ini  setup.cfg  tox.ini
.github/workflows/: pr.yaml  release.yaml
docs/: conf.py  index.rst  license.rst
src/astropy/: __main__.py  ecc.py  field.py
src/astropy/secp256k1/: ecc.py  key.py
src/estyl/secp256k1/: ecc.py  field.py  key.py  test_field.py
