[metadata]
name = astropy
author = Alex Laurent
author_email = shaoner@pm.me
summary = astropy
description-file = README.md
url = https://github.com/alexlren/astropy
classifiers =
  Development Status :: 1 - Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering
license_files = LICENSE

[options]
python_requires = >= 3.8
packages = find:
package_dir =
    =src
zip_safe = False

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
  astropy = astropy.__main__:main

[build_sphinx]
builders = html
source-dir = docs
build-dir = docs/_build
all-files = 1
