[metadata]
name = estyl
author = Alex Laurent
author_email = shaoner@pm.me
summary = estyl
description-file = README.md
url = https://github.com/alexlren/estyl
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering
license_files = LICENSE

[options]
python_requires = >= 3.8
packages = find:
package_dir =
    =src
zip_safe = False

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
  estyl = estyl.__main__:main

[build_sphinx]
builders = html
source-dir = docs
build-dir = docs/_build
all-files = 1
